--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+    <script src="https://kit.fontawesome.com/3bc9e9859c.js" crossorigin="anonymous"></script>
   </body>
 </html>
